--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,6 +1,6 @@
 mountpoints:
   /:
-    url: https://content.da.live/{vamsikrishnavallabhaneni}/{adobe-storefront-eds}/
+    url: https://content.da.live/vamsikrishnavallabhaneni/adobe-storefront-eds/
     type: markup
 
 folders:
